# hicollege-build-ccpp

example1/: CMakeLists.txt
example1-hello-world/: CMakeLists.txt  main.c
example2/: CMakeLists.txt  Makefile  build_ems.sh  hello_sdl.cpp
example2-cross-compile/: CMakeLists.txt  build_ems.sh  main.c
example2-cross-compile/cmake/: FindSDL2.cmake
example3-cmake-lang/: CMakeLists.txt
example3-conan-consumer/: CMakeLists.txt  conanfile.txt
example4-conan-package/: create_package.sh
example5-conan-consumer/: main.cpp
example5-conanfilepy/: CMakeLists.txt  conanfile.py  main.cpp
example6-libmorse/: CMakeLists.txt
example6-libmorse/test_package/: conanfile.py  example.cpp
example7-arduino/: CMakeLists.txt  main.cpp
example7-libmorse/: conanfile.py
example7-libmorse/test_package/: CMakeLists.txt
example8-android/MorseApp/app/: CMakeLists.txt  build.gradle  conan_android.profile  conanfile.txt
example8-android/MorseApp/app/src/main/cpp/: native-lib.cpp
example8-android/MorseApp/app/src/main/java/com/example/morseapp/: MainActivity.java
example8-android/MorseApp/app/src/main/res/layout/: content_main.xml
example8-android/MorseApp/app/src/main/res/menu/: menu_main.xml
example8-android/MorseApp/app/src/test/java/com/example/morseapp/: ExampleUnitTest.java
example8-android/MorseApp/gradle/wrapper/: gradle-wrapper.properties
example8-arduino/conan/: avr.profile
example9-android/MorseApp/app/: build.gradle  proguard-rules.pro
example9-android/MorseApp/app/src/androidTest/java/com/example/morseapp/: ExampleInstrumentedTest.java
example9-android/MorseApp/app/src/main/: AndroidManifest.xml
example9-android/MorseApp/app/src/main/java/com/example/morseapp/: LibMorse.java  MainActivity.java  Morse.java
example9-android/MorseApp/app/src/main/res/layout/: activity_main.xml  content_main.xml
example9-android/MorseApp/app/src/main/res/values/: strings.xml
